# AliDPG

./: CMakeLists.txt
DataProc/PPass/: main_rec.C
MC/: ReconstructionConfig.C  SimulationConfig.C  dpgsim.sh  rec.C
MC/CustomGenerators/DPG/: PerformanceGenerator.C
Utilis/: utilities.sh
Utilis/test/: CMakeLists.txt  genPerformance.config.sh  utilities.test.sh
doxygen/: CMakeLists.txt  Doxyfile.in  mainpage.md
